--- a/package.json
+++ b/package.json
@@ -9,13 +9,11 @@
   },
   "main": "lib/index.js",
   "license": "GPL-3.0",
-  "dependencies": {
-    "binary-search": "^1.3.2",
-    "tera-crypto-native": "github:caali-hackerman/tera-crypto-native",
-    "tera-crypto-js": "github:caali-hackerman/tera-crypto-js",
-    "tera-data-parser": "github:caali-hackerman/tera-data-parser-js",
-    "tera-vec3": "github:caali-hackerman/tera-vec3"
-  },
+	"dependencies": {
+		"binary-search": "^1.3.2",
+		"tera-crypto": "github:tera-proxy/tera-crypto",
+		"tera-data-parser": "github:tera-proxy/tera-data-parser"
+},
   "bugs": {
     "url": "https://github.com/kyoukaya/tera-proxy-game/issues"
   },
